--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -5,7 +5,7 @@
   <title>Popup</title>
 </head>
 <body style="min-width: 200px;">
-  <div id="app"></div>
+  <div id="jcvApp"></div>
   <script type="module" src="./main.ts"></script>
 </body>
 </html>
